# checklist

./: .gitignore  CMakeLists.txt  README.md  main.cpp  menu.cpp
src/: main.cpp  menu.cpp  menu.hpp  table.cpp  table.hpp  util.cpp
